{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 185,
  "lineage": "5e955c78-84fb-881f-de65-c030c0aa2695",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sles",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01984dd3dc31ca7cd",
            "associate_with_private_ip": "10.0.1.20",
            "association_id": "eipassoc-0848f0e125abd5e7d",
            "domain": "vpc",
            "id": "eipalloc-01984dd3dc31ca7cd",
            "instance": "i-052db4d3f601bf2ad",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a620c75ed0f81827",
            "private_dns": "ip-10-0-1-20.ec2.internal",
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-54-205-143-32.compute-1.amazonaws.com",
            "public_ip": "54.205.143.32",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.sles-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.sumademo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bef2053fb3e63309",
            "associate_with_private_ip": "10.0.1.21",
            "association_id": "eipassoc-07647372230b1e3c4",
            "domain": "vpc",
            "id": "eipalloc-0bef2053fb3e63309",
            "instance": "i-090cc49753f78a0c0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09848d59bcb95f8ea",
            "private_dns": "ip-10-0-1-21.ec2.internal",
            "private_ip": "10.0.1.21",
            "public_dns": "ec2-3-220-226-68.compute-1.amazonaws.com",
            "public_ip": "3.220.226.68",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.sles-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.sumademo",
            "aws_internet_gateway.gw"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc408a0128a53095",
            "associate_with_private_ip": "10.0.1.22",
            "association_id": "eipassoc-08c13568b3083a2f5",
            "domain": "vpc",
            "id": "eipalloc-0bc408a0128a53095",
            "instance": "i-05e60e7bd642dd2b3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00beef1a19fe08c65",
            "private_dns": "ip-10-0-1-22.ec2.internal",
            "private_ip": "10.0.1.22",
            "public_dns": "ec2-34-197-72-223.compute-1.amazonaws.com",
            "public_ip": "34.197.72.223",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.sles-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.sumademo",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa780e457221db60",
            "associate_with_private_ip": "10.0.1.10",
            "association_id": "eipassoc-028009320bf5c2604",
            "domain": "vpc",
            "id": "eipalloc-0fa780e457221db60",
            "instance": "i-0b8e92d11ba563b02",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09913a22889c03463",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-54-172-173-125.compute-1.amazonaws.com",
            "public_ip": "54.172.173.125",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.ubuntu-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.sumademo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023cce93332e96108",
            "associate_with_private_ip": "10.0.1.11",
            "association_id": "eipassoc-0b22b27f59212296f",
            "domain": "vpc",
            "id": "eipalloc-023cce93332e96108",
            "network_border_group": "us-east-1",
            "network_interface": "eni-026e04d34d9a89a12",
            "private_dns": "ip-10-0-1-11.ec2.internal",
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-54-208-243-195.compute-1.amazonaws.com",
            "public_ip": "54.208.243.195",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.sumademo",
            "aws_internet_gateway.gw",
            "aws_network_interface.ubuntu-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sles",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04625ec1368bfcad1",
            "arn": "arn:aws:ec2:us-east-1:033128085774:instance/i-052db4d3f601bf2ad",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052db4d3f601bf2ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sumademo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0a620c75ed0f81827"
              }
            ],
            "primary_network_interface_id": "eni-0a620c75ed0f81827",
            "private_dns": "ip-10-0-1-20.ec2.internal",
            "private_ip": "10.0.1.20",
            "public_ip": "54.205.143.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05f693fbb47d9935d",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2ea0c53abbb732e",
            "tags": {
              "Name": "sles-0"
            },
            "tags_all": {
              "Name": "sles-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0be0ffc462bbdb521"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet1",
            "aws_vpc.sumademo",
            "aws_network_interface.sles-nic",
            "aws_security_group.allow_web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04625ec1368bfcad1",
            "arn": "arn:aws:ec2:us-east-1:033128085774:instance/i-090cc49753f78a0c0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090cc49753f78a0c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sumademo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-09848d59bcb95f8ea"
              }
            ],
            "primary_network_interface_id": "eni-09848d59bcb95f8ea",
            "private_dns": "ip-10-0-1-21.ec2.internal",
            "private_ip": "10.0.1.21",
            "public_ip": "3.220.226.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d786c6e593e9a085",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2ea0c53abbb732e",
            "tags": {
              "Name": "sles-1"
            },
            "tags_all": {
              "Name": "sles-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0be0ffc462bbdb521"
            ]
          },
          "dependencies": [
            "aws_network_interface.sles-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.sumademo"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04625ec1368bfcad1",
            "arn": "arn:aws:ec2:us-east-1:033128085774:instance/i-05e60e7bd642dd2b3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05e60e7bd642dd2b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sumademo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-00beef1a19fe08c65"
              }
            ],
            "primary_network_interface_id": "eni-00beef1a19fe08c65",
            "private_dns": "ip-10-0-1-22.ec2.internal",
            "private_ip": "10.0.1.22",
            "public_ip": "34.197.72.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08bf9e4305ebd025b",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2ea0c53abbb732e",
            "tags": {
              "Name": "sles-2"
            },
            "tags_all": {
              "Name": "sles-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0be0ffc462bbdb521"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet1",
            "aws_vpc.sumademo",
            "aws_network_interface.sles-nic",
            "aws_security_group.allow_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:033128085774:instance/i-0b8e92d11ba563b02",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8e92d11ba563b02",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sumademo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-09913a22889c03463"
              }
            ],
            "primary_network_interface_id": "eni-09913a22889c03463",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_ip": "10.0.1.10",
            "public_ip": "54.172.173.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-010e8808054a1b47c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2ea0c53abbb732e",
            "tags": {
              "Name": "ubuntu-0"
            },
            "tags_all": {
              "Name": "ubuntu-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0be0ffc462bbdb521"
            ]
          },
          "dependencies": [
            "aws_vpc.sumademo",
            "aws_network_interface.ubuntu-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:033128085774:instance/i-0d2accc334d44eaa1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2accc334d44eaa1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sumademo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-026e04d34d9a89a12"
              }
            ],
            "primary_network_interface_id": "eni-026e04d34d9a89a12",
            "private_dns": "ip-10-0-1-11.ec2.internal",
            "private_ip": "10.0.1.11",
            "public_ip": "54.208.243.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06bb745050093c4d0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2ea0c53abbb732e",
            "tags": {
              "Name": "ubuntu-1"
            },
            "tags_all": {
              "Name": "ubuntu-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0be0ffc462bbdb521"
            ]
          },
          "dependencies": [
            "aws_network_interface.ubuntu-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033128085774:internet-gateway/igw-0b3329af2023670bb",
            "id": "igw-0b3329af2023670bb",
            "owner_id": "033128085774",
            "tags": {
              "Name": "sumademo"
            },
            "tags_all": {
              "Name": "sumademo"
            },
            "vpc_id": "vpc-05ab1c415c13b02da"
          },
          "dependencies": [
            "aws_vpc.sumademo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sles-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033128085774:network-interface/eni-0a620c75ed0f81827",
            "attachment": [
              {
                "attachment_id": "eni-attach-0a2ab5ec93434e70e",
                "device_index": 0,
                "instance": "i-052db4d3f601bf2ad"
              }
            ],
            "id": "eni-0a620c75ed0f81827",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:39:0e:b2:df:fb",
            "owner_id": "033128085774",
            "private_ip": "10.0.1.20",
            "private_ip_list": [
              "10.0.1.20"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.20"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0be0ffc462bbdb521"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2ea0c53abbb732e"
          },
          "dependencies": [
            "aws_vpc.sumademo",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033128085774:network-interface/eni-09848d59bcb95f8ea",
            "attachment": [
              {
                "attachment_id": "eni-attach-074e89a5444696e23",
                "device_index": 0,
                "instance": "i-090cc49753f78a0c0"
              }
            ],
            "id": "eni-09848d59bcb95f8ea",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:e3:20:5b:b7:f9",
            "owner_id": "033128085774",
            "private_ip": "10.0.1.21",
            "private_ip_list": [
              "10.0.1.21"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.21"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0be0ffc462bbdb521"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2ea0c53abbb732e"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.sumademo"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033128085774:network-interface/eni-00beef1a19fe08c65",
            "attachment": [
              {
                "attachment_id": "eni-attach-09c1b9cd5099bee39",
                "device_index": 0,
                "instance": "i-05e60e7bd642dd2b3"
              }
            ],
            "id": "eni-00beef1a19fe08c65",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:78:e1:06:6e:3b",
            "owner_id": "033128085774",
            "private_ip": "10.0.1.22",
            "private_ip_list": [
              "10.0.1.22"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.22"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0be0ffc462bbdb521"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2ea0c53abbb732e"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.sumademo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ubuntu-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033128085774:network-interface/eni-09913a22889c03463",
            "attachment": [
              {
                "attachment_id": "eni-attach-042e2c99085e89f3e",
                "device_index": 0,
                "instance": "i-0b8e92d11ba563b02"
              }
            ],
            "id": "eni-09913a22889c03463",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:76:6b:69:a0:a7",
            "owner_id": "033128085774",
            "private_ip": "10.0.1.10",
            "private_ip_list": [
              "10.0.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0be0ffc462bbdb521"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2ea0c53abbb732e"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.sumademo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033128085774:network-interface/eni-026e04d34d9a89a12",
            "id": "eni-026e04d34d9a89a12",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:f7:55:24:ad:f9",
            "owner_id": "033128085774",
            "private_ip": "10.0.1.11",
            "private_ip_list": [
              "10.0.1.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0be0ffc462bbdb521"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2ea0c53abbb732e"
          },
          "dependencies": [
            "aws_vpc.sumademo",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033128085774:route-table/rtb-06adb79934ea195bf",
            "id": "rtb-06adb79934ea195bf",
            "owner_id": "033128085774",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b3329af2023670bb",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b3329af2023670bb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sumademo"
            },
            "tags_all": {
              "Name": "sumademo"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ab1c415c13b02da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.sumademo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03accd5841941d928",
            "route_table_id": "rtb-06adb79934ea195bf",
            "subnet_id": "subnet-0b2ea0c53abbb732e"
          },
          "dependencies": [
            "aws_route_table.demo-route-table",
            "aws_subnet.subnet1",
            "aws_vpc.sumademo",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033128085774:security-group/sg-0be0ffc462bbdb521",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be0ffc462bbdb521",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "salt1",
                "from_port": 4505,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4505
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "salt1",
                "from_port": 4506,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4506
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Accept all in VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "033128085774",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ab1c415c13b02da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sumademo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033128085774:subnet/subnet-0b2ea0c53abbb732e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2ea0c53abbb732e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033128085774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_subnet"
            },
            "tags_all": {
              "Name": "demo_subnet"
            },
            "vpc_id": "vpc-05ab1c415c13b02da"
          },
          "dependencies": [
            "aws_vpc.sumademo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sumademo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033128085774:vpc/vpc-05ab1c415c13b02da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a2fa06e24cbd8053",
            "default_route_table_id": "rtb-0d1bff71abb71d5fc",
            "default_security_group_id": "sg-077327ef47bbab016",
            "dhcp_options_id": "dopt-5e713f24",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05ab1c415c13b02da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1bff71abb71d5fc",
            "owner_id": "033128085774",
            "tags": {
              "Name": "sumademo"
            },
            "tags_all": {
              "Name": "sumademo"
            }
          }
        }
      ]
    }
  ]
}